@@ -26,6 +26,7 @@ Joe Perches             joe@perches.com
 Jun Nakajima            jun.nakajima@intel.com
 Justin Pettit           jpettit@nicira.com
 Keith Amidon            keith@nicira.com
+Luca Giraudo            lgiraudo@nicira.com
 Martin Casado           casado@nicira.com
 Natasha Gude            natasha@nicira.com
 Neil McKee              neil.mckee@inmon.com
